Bugfix: SVG overflow Fixes a weird viewbox bug in IE when rescaling the SVG image. Viewbox resets correctly but the browser continues to display the entire SVG image outside the viewbox.

--- a/project.styl
+++ b/project.styl
@@ -16,6 +16,9 @@
   .marking-surface-tool[data-selected] .marking-surface-tool-selected-root
     filter: none
   
+  .marking-surface
+    overflow: hidden
+    
   .drawing-controls
     a
       text-decoration: none
